# deck_royale_ml_ops

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml
airflow/: .gitignore  docker-compose.yaml  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/: deck_scraper.py  regulalry_scrape_deck.py
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
backend/cached_scrapings/: cached_decks_popular.txt  cards.json  popular_decks.txt
backend/deck_evaluator_monitoring/: evaluator_api.py  format_checker.py  gpt_simulator.py  wandb_logger.py
backend/prompts/: developer_prompt.md  evaluation_prompt.md
backend/scraper/: __init__.py  decks.py  scraper.py
backend/src/: get_envs.py  main.py
backend/src/agent/: README.md  __init__.py  chat.py  evaluatetest.py  evaluator_prompt.md  prompt.py
backend/src/api/: __init__.py  chat.py  decks.py  players.py  prompts.py  structure.jsonc
backend/src/clashroyale/: README.md  __init__.py  get_card.py  get_player_info.py  player_to_md.py  schemas.py
backend/src/db/: __init__.py  chat.py  db_init.py  player.py  schemas.py  structure.jsonc
backend/src/meta_decks/: README.md  __init__.py  decks_to_md.py  parser.py  schemas.py  scraper.py
backend/tests/: test_main.py
frontend/: .prettierrc  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/Chat/: AssistantBubble.vue  Form.vue  NewConversationBtn.vue  UserBubble.vue
frontend/app/composables/: useChatMutation.ts  useChatRepo.ts  useCreateConversationMutation.ts  useEnv.ts  useFirebaseInstance.ts  useInfiniteConversationsQuery.ts  useInfiniteMessagesQuery.ts
frontend/app/pages/: index.vue
frontend/app/pages/[userId]/: conversations.vue
frontend/app/pages/[userId]/conversations/: [conversationId].vue  index.vue
frontend/app/plugins/: vue-query.ts
frontend/app/utils/repos/: chatRepo.ts
mlflow/: .dockerignore  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml
monitor/: .gitignore  docker-compose.yaml  main.py  monitor.ipynb  pyproject.toml
monitor/grafana/dashboards/: model_performance.json
royaleapi-proxy/: Dockerfile  README.md  package-lock.json  package.json
royaleapi-proxy/.github/: copilot-instructions.md
royaleapi-proxy/src/: index.ts  utils.ts
