[project]
name = "monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.8",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "mlflow>=3.1.0",
    "openai>=1.9.0",
    "pandas>=2.2.3",
    "pendulum>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
]